# c1z2

./: .clang-tidy  .gitmodules  CMakeLists.txt  README.md  TODO.md  meson.build  sdl3_for_meson.bash
cuno/: CMakeLists.txt  README.md  cuno.cpp
ffi/: .gitignore  README.md  meson.build
ffi/chez/: draw_gaping_lines.ss  ffi.ss  minidraw.ss  pointer-type.ss
ffi/ftype/: ftype.cmake  pointer-types.cpp  pointer-types.h
ffi/julia/: minidraw.jl  star.jl  struct-ptr.jl
ffi/minidraw/: .gitignore  README.md  draw_gaping_lines.ss  draw_grid.rkt  grid.rkt  minidraw.cmake  minidraw.cpp  minidraw.h  minidraw.rkt  minidraw_chez.ss
graphics/: README.md  SDL.cmake  SDL_drag_resize_rect.cpp  SDL_drawText.cpp  SDL_keyboards_ev.cpp  SDL_quarter.cpp  SDL_scrolling.cpp  SDL_sinWave.cpp  SDL_text_cursor_move.cpp  SDL_text_editing.cpp  SDL_window.cpp  SDL_window.h  meson.build
graphics/font/: pango.cmake  pango_basic.cpp  pango_text_attr.cpp  pango_text_wrapping.cpp
ipc/pipe/echoRandoms/: .gitignore  README.md  randomReceiver.rkt  randomSender.cpp
sexpr/: README.md  sexpr_rec.cpp  sexpr_rec.h  sexpr_rec_tests.cpp
ui/: README.md  Z.h  Z_app.cpp  Z_app.h  Z_button.cpp  Z_button.h  Z_ns.h  Z_widget.cpp  Z_widget.h  meson.build
ui/tests/: meson.build  nest_layout.cpp  sample.cpp
